objects/ASI_eForm_Tuition_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Education_Level__c</fullName>
        <label>Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>유치원 Kindergarten</fullName>
                </value>
                <value>
                    <fullName>중 Middle</fullName>
                </value>
                <value>
                    <fullName>고등학교 High School</fullName>
                </value>
                <value>
                    <fullName>2년/3년제 대학 College</fullName>
                </value>
                <value>
                    <fullName>4년제 대학교 University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Education_Level__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>유치원 축하금 (40만원) Kindergarten Tuition Fee (Max. KWR 400,000)</fullName>
                </value>
                <value>
                    <fullName>수업료 Education Fee</fullName>
                </value>
                <value>
                    <fullName>육성회비 School Supporting Fee</fullName>
                </value>
                <value>
                    <fullName>입학금 Entrance Fee</fullName>
                </value>
                <value>
                    <fullName>해외유학 또는 특정 사립학교 overseas educational institutions or certain private schools</fullName>
                </value>
                <value>
                    <fullName>2년/3년제 대학(최대 3백만원) College Tuition Fee (Max. KRW 3,000,000)</fullName>
                </value>
                <value>
                    <fullName>4년제 대학교(최대 5백만원) University Tuition Fee (Max. KRW 5,000,000)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Fee__c</fullName>
        <label>Fee</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Education_Level__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Name_of_Child__c</fullName>
        <label>Name of Child</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_School_Name__c</fullName>
        <label>School Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Tuition__c</fullName>
        <label>Tuition Expense</label>
        <referenceTo>ASI_eForm_Tuition__c</referenceTo>
        <relationshipLabel>Children Tuition Expense Details</relationshipLabel>
        <relationshipName>Children_School_Line_Items1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Children Tuition Expense Detail</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>ASI_eForm_Tuition_Detail_No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children Tuition Expense Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Children_School_Expense</fullName>
        <active>true</active>
        <label>KR Children School Expense</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_CollegeFeeLimit</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(ASI_eForm_Education_Level__c, &apos;2년/3년제 대학 College&apos;) &amp;&amp; ASI_eForm_Fee__c &gt; 3000000 , ASI_eForm_Fee__c &gt; 3000000, null)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Fee__c</errorDisplayField>
        <errorMessage>Maximum claim amount is 3,000,000 KRW</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_KindergartenFeeLimit</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(ASI_eForm_Education_Level__c, &apos;유치원 Kindergarten&apos;) &amp;&amp;  ASI_eForm_Fee__c &gt; 400000 , ASI_eForm_Fee__c &gt; 400000, null)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Fee__c</errorDisplayField>
        <errorMessage>Maximum claim amount is 400,000 KRW</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_UniversityFeeLimit</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(ASI_eForm_Education_Level__c, &apos;4년제 대학교 University&apos;) &amp;&amp; ASI_eForm_Fee__c &gt; 5000000 , ASI_eForm_Fee__c &gt; 5000000, null)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Fee__c</errorDisplayField>
        <errorMessage>Maximum claim amount is 5,000,000 KRW</errorMessage>
    </validationRules>
</CustomObject>